--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,32 +1,32 @@
 
-table{
+table {
     width: 100%;
     border-collapse: collapse;
 }
 
-tr:nth-child(even){
+tr:nth-child(even) {
     background: #CCC !important
 }
 
-td{
+td {
     text-align: justify;
     padding-right: 10%;
     width: 20%;
 }
 
-tr td.code{
+tr td.code {
     width: 40%;
 }
 
-#app{
+#app {
     width: 60%;
-    margin-top: 10%;
+    margin-top: 100px;
     border: 1px solid #e6e6e6;
     padding: 2%;
     background: rgb(247, 244, 244);
 }
 
-#sendBtn{
+#sendBtn {
     background: #ff9419;
     line-height: 40px;
     height: 40px;
@@ -45,7 +45,12 @@ tr td.code{
     padding: 5px 35px 5px 5px;
 }
 
-.main{
+#countriesSelect option::-ms-value {
+    background-color: white; 
+    color:#000;
+}
+
+.main {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -65,6 +70,7 @@ tr td.code{
 }
 
 .selectArea {
+    overflow: hidden;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -85,9 +91,10 @@ tr td.code{
     width: 50px;
     height: 50px;
     animation: spin 2s linear infinite;
+    -webkit-animation: spin 2s linear infinite;
 }
 
-div.result{
+div.result {
     margin-top: 4%;
     display: flex;
     justify-content: center;
@@ -96,4 +103,6 @@ div.result{
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
 }
